# cdst

./: .gitignore  CMakeLists.txt  README.md
include/cdst/: cdst.h
src/: cdst.c  iso1366_numeric.h
tests/: test_cdst.c
